--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -380,7 +380,9 @@ In detail, the steps are as follows:
 
     It is clear that $\fourierxform{\phi}_n(f_k)$ has both positive and negative frequencies and the magnitude is symmetric in $f_k$.
     
-    \item Finally, apply the inverse Fourier transform, Eq.~(\ref{eq:iDFT_definiton}), to $\fourierxform{\phi}_n(f_k)$. The  output is a  random  discrete  time  series, $\phi(n\Delta t)$ of $N$ values sampled every $\Delta t = 1/f_s=1/f_\mathrm{rev}$. In other words, $\phi_n$ forms the sequence of noise kicks that will act on the particles in the beam on each turn in the simulations.
+    \item Finally, apply the inverse Fourier transform, Eq.~(\ref{eq:iDFT_definiton}), to $\fourierxform{\phi}_n(f_k)$. The  output is a  random  discrete  time  series, $\phi(n\Delta t)$ of $N$ values sampled every $\Delta t = 1/f_s=1/f_\mathrm{rev}$. 
+    
+    \item The output $\phi_n$ forms the sequence of noise kicks that will act on the particles in the beam on each turn in the simulations. In particular
 \end{enumerate} 
 
 %Path to plotting script: cernbox/Project_thesis/scripts_for_simple_figures_plot/measured_psd_to_time_series
@@ -438,14 +440,14 @@ In detail, the steps are as follows:
 
 
 \subsection{Validation of the time series reconstruction}
-This section describes the benchmarks that were carried out to ensure that the method described in section \ref{subsec:generatin_noise_kicks} produces a valid time series for a set of noise kicks, for a given power spectrum. 
+This section describes the benchmarks that were carried out to ensure that the above procedure produces a valid time series for a set of noise kicks, for a given power spectrum. 
 
 \subsubsection*{Comparison of measured and reconstructed power spectrum} %\hfill \break
 Figure \ref{fig:generate_noise_kicks_sanity_check_1} shows the results of the first benchmark, comparing the measured power spectral density with the power spectral density computed from the generated time series $\phi_n$. The two power spectra appear to be consistent with each other, which supports the validity of the method described above for generating the sequence of noise kicks from a given power spectrum. 
 
 \begin{figure}[!ht]
      \centering         
-     \includegraphics[width=0.5\textwidth]{./images/app_B/coast1_setting2_Syy_original_vs_reconstructed_sanity_check.png}
+     \includegraphics[width=0.5\textwidth]{./images/app_B/coast1_setting2_v5.png}
          \caption{Power spectral density computed from the time series $\phi_n$ produced from a measured power spectrum (black), compared with the original measured power spectrum (green).}
          \label{fig:generate_noise_kicks_sanity_check_1}
 \end{figure} 
