--- a/appendix/appendix_b.tex
+++ b/appendix/appendix_b.tex
@@ -90,7 +90,10 @@ where the index $k$ is an integer in the range $-\frac{N-1}{2}$ to $\frac{N-1}{2
 
 %It should be noted that the discrete Fourier transform is calculated only at integer values of $k$, and therefore for $N$ samples the discrete Fourier transform will consist of $N$ numbers. 
 
-The components of the discrete Fourier transform are calculated at frequencies $f_k$ that are integer multiples of $\Delta f = 1/T_\mathrm{total} = f_s/N$, with $f_s = 1/\Delta t$ the sampling frequency. In that case, $f_k \in \left[-\frac{N-1}{2T_\mathrm{total}},\frac{N-1}{2T_\mathrm{total}} \right]$. An example of a discrete Fourier transform is shown in Fig.~\ref{fig:signal_and_DFT_example}.
+The components of the discrete Fourier transform are calculated at frequencies $f_k$ that are integer multiples of $\Delta f = 1/T_\mathrm{total} = f_s/N$, with $f_s = 1/\Delta t$ the sampling frequency. In that case, $f_k \in \left[-f_s/2, + f_s/2 \right]$. An example of a discrete Fourier transform is shown in Fig.~\ref{fig:signal_and_DFT_example}.
+
+
+%In that case, $f_k \in \left[-\frac{N-1}{2T_\mathrm{total}},\frac{N-1}{2T_\mathrm{total}} \right]$. An example of a discrete Fourier transform is shown in Fig.~\ref{fig:signal_and_DFT_example}.
 %/Delta_f is the resolution frequency
 \begin{figure}[!ht]
     \centering
@@ -112,7 +115,11 @@ The components of the discrete Fourier transform are calculated at frequencies $
      \label{fig:signal_and_DFT_example}
 \end{figure}
 
-When using this convension the Fourier tranfrom components outisde of the above mentioned frequency range are considered zero. Note that the zero frequency, $f_k=0$, corresponds to $n=0$. The positive frequencies, $0  < f_k < + \frac{N-1}{2T_\mathrm{total}}$ correspond to values $1 < n < (N-1)/2$ and the negative frequencies,  $-\frac{N-1}{2T_\mathrm{total}}  < f_k < 0$ correspond to values $(N-1)/2 < f_k < 0$. The value n = $(N-1)/2$ corresponds to both $f_k = - \frac{N-1}{2T_\mathrm{total}}$ and + $\frac{N-1}{2T_\mathrm{total}}$
+When using this convension the Fourier tranfrom components outisde of the above mentioned frequency range are considered zero. Note that the zero frequency, $f_k=0$, corresponds to $n=0$. The positive frequencies, $0  < f_k < + f_s/2$ correspond to values $1 < n < (N-1)/2$ and the negative frequencies,  $-f_s/2  < f_k < 0$ correspond to values $-f_s/2 < 0$. The value n = $(N-1)/2$ corresponds to both $f_k = - f_s/2$ and $+f_s/2$.
+
+%The positive frequencies, $0  < f_k < + \frac{N-1}{2T_\mathrm{total}}$ correspond to values $1 < n < (N-1)/2$ and the negative frequencies,  $-\frac{N-1}{2T_\mathrm{total}}  < f_k < 0$ correspond to values $(N-1)/2 < f_k < 0$. The value n = $(N-1)/2$ corresponds to both $f_k = - \frac{N-1}{2T_\mathrm{total}}$ and + $\frac{N-1}{2T_\mathrm{total}}$
+
+
 
 % p.503 in the following link: https://faculty.washington.edu/seattle/brain-physics/FFT/numerical-recipes.pdf
 
@@ -130,7 +137,7 @@ Following Eq.~(\ref{eq:Sxx_definition_v2}) the power spectral density of a discr
 \begin{equation}\label{eq:Sxx_definition_discrete_not_normalised}
     S_{yy}(f_k) = C_\mathrm{PSD} \mid \fourierxform{y}_k(f_k) \mid ^2,
 \end{equation}
-where $f_k \in \left[-\frac{N-1}{2T_\mathrm{total}},\frac{N-1}{2T_\mathrm{total}} \right]$. $C_\mathrm{PSD}$ is a normalisation constant which is introduced in order to obtain the correct amplitudes at each frequency and thus the correct noise power. There are several different conventions for the choice of this normalization. In this thesis, the following normalization is considered (more details in the following paragraph):
+where $f_k \in \left[-f_s/2, + f_s/2 \right]$. $C_\mathrm{PSD}$ is a normalisation constant which is introduced in order to obtain the correct amplitudes at each frequency and thus the correct noise power. There are several different conventions for the choice of this normalization. In this thesis, the following normalization is considered:% (more details in the following paragraph):
 % I choose this normalisation as it gave the correct results in terms of noise power.
 \begin{equation}\label{eq:Sxx_definition_discrete_normalized}
     S_{yy}(f_k) = \frac{1}{N^2 \Delta f} \mid \fourierxform{y}_k(f_k) \mid ^2,
@@ -144,7 +151,7 @@ where  $\Delta f = 1/T_\mathrm{total}$ the frequency resolution and $N$ the numb
         \label{fig:psd_example_two_sided}
 \end{figure}
 
-Figure~\ref{fig:psd_example_two_sided} shows an example power spectrum of the time-domain signal shown in Fig.~\ref{fig:signal_and_DFT_example}a. It can be seen that the spectrum that results from the analysis above is two-sided, which means that it has both positive and negative frequencies. It is also symmetric around the DC component ($f = $0\,Hz), which is a property of a real signal. 
+Figure~\ref{fig:psd_example_two_sided} shows an example power spectrum of the time-domain signal shown in Fig.~\ref{fig:signal_and_DFT_example}. It can be seen that the spectrum that results from the analysis above is two-sided, which means that it has both positive and negative frequencies. It is also symmetric around the DC component ($f = $0\,Hz), which is a property of a real signal. 
 
 The power spectral density is expressed in terms of the square of the amplitude of the signal per unit frequency. For example, for a signal defined in units of voltage, V, (e.g. from an oscillator) the units are $\mathrm{V^2/Hz}$.
 
@@ -172,9 +179,11 @@ The power spectral density is expressed in terms of the square of the amplitude 
 \subsubsection*{Normalisation factor for the power spectral density of a discrete-time signal}\label{appendix_dft_normalisation}
 This paragraph, discusses the choice of the normalisation factor $C_\mathrm{PSD}=1/(N^2 \Delta f)$ for the power spectral density of a discrete-time signal defined in Eq.~\eqref{eq:Sxx_definition_discrete_not_normalised}.
 
-The discussion here is limited to noise signals with mean zero. This is justified since this conditions is valid for the noise spectra considered in the thesis. In particular the mean of the white noise spectra used in the simulation studies is zero by definition. The mean of the measured noise signal corresponds to the DC componenet which for the spectra discussed in this thesis was also at 0\,Hz.
+The discussion concerns noise signals with mean zero which is the case for the noise spectra considered in the thesis. In particular the mean of the white noise spectra used in the simulation studies is zero by definition. The mean of the measured noise signal corresponds to the DC componenet which for the spectra discussed in this thesis was also considered at 0\,Hz.
 
-Consider the example of a discrete-time series $y_n = y(n\Delta t)$ where $n$ is an integer such that $n \in [0, N-1]$. $y_n$ represents a sequence of successive points equally spaced in time, with zero mean, $\mu=0$. The variance of this collection of $N$ equally spaced values is given by:
+%. This is justified since this conditions is valid
+
+Consider the example of a discrete-time series $y_n = y(n\Delta t)$ where $n$ is an integer such that $n \in [0, N-1]$. The $y_n$ represents a sequence of successive points equally spaced in time, with zero mean, $\mu=0$. The variance of this collection of $N$ equally spaced values is given by:
 
 %drawn from a normal distribution with known standard deviation $\sigma$ and zero mean, $\mu=0$. The variance of this collection of $N$ equally spaced values is given by:
 \begin{equation}\label{eq:variance}
@@ -221,7 +230,7 @@ Hence, the normalisation factor in Eq.~\eqref{eq:Sxx_definition_discrete_not_nor
 \end{equation}
 
 \textbf{Computation of power spectral density for white noise signals}\\
-At this point it is worth elaborating on the computation of the power spectral density, in the context of the noise effects in a synchrotron that are studied in this thesis.
+At this point, it is worth elaborating on the computation of the power spectral density, in the context of the noise effects in a synchrotron that are studied in this thesis.
 
 In Chapter~\ref{Ch:CC_noise_theory} it was discussed that the noise effects are modeled as kicks which update the angle co-ordinates of the particles and which are applied to them once per turn and thus they consist of a discrete-time signal. The power spectral density of that noise signal is given by Eq.~\eqref{eq:autocorrelation_zero_lag_discrete}.  Now, given the fact that in an accelerator the particles receive the noise kicks once per turn, the sampling frequency, $f_s$ equals the revolution frequency, $\frev$. This means that the frequency resolution, $\Delta f$, can be written as $\Delta f = f_s/N = \frev/N$, where $N$ is the number of samples (or size) in the noise signal. 
 
@@ -354,15 +363,16 @@ In other words, the power spectral density at a given frequency, $f_k$, for a wh
 
 \section{Applying a measured noise spectrum in numerical simulations}\label{sec:measured_spectra_to_time_series}
 
-This section discusses the steps required to convert a measured noise spectra to a discrete-time series i.e. a sequence of noise kicks, that can be used in tracking simulations. For the discussion an example phase noise spectra measured during the $\CC$ tests in SPS in 2018 are discussed (see Fig.~\ref{fig:coast1_setting2_a}). Note that the steps are the same for an amplitude noise spectra. The procedure involves converting the measured noise power to the power spectral density and then using the inverse Fourier transform to produce the discrete-time series of noise kicks. 
+This section discusses the steps required to convert a measured noise spectrum to a discrete-time series i.e. a sequence of noise kicks, that can be used in tracking simulations. For the discussion, an example phase noise spectrum measured during the $\CC$ tests in SPS in 2018 is discussed (see Fig.~\ref{fig:coast1_setting2_a}). Note that the steps are the same for an amplitude noise spectrum. The procedure involves converting the measured noise power to the power spectral density and then using the inverse Fourier transform to produce the discrete-time series of noise kicks. 
 
 In detail, the steps are as follows:
 
+
 \begin{enumerate}
-    \item  Convert the measured noise power $10\log_{10}\mathcal{L}(f_k)$\,[dBc/Hz] to the power spectral density, $S_{\Delta \phi}(f_k)$, recalling that $S_{\Delta \phi}(f_k) = \mathcal{L}(f_k)$ (see Section~\ref{sec:injected_RF_noise}). This is shown in Fig.~\ref{fig:coast1_setting2_b}. For now the analysis is limited to $f_k \in [1, 10^{3}]$\,kHz. Note, that both $\mathcal{L}(f_k)$ and $S_{\Delta \phi}(f_k)$ have both negative and positive components and are symmetric around the DC component, $f_k=0$\,Hz (see Section~\ref{sec:injected_RF_noise}).
+    \item  Convert the measured noise power $10\log_{10}\mathcal{L}(f_k)$\,[dBc/Hz] to the power spectral density, $S_{\Delta \phi}(f_k)$, recalling that $S_{\Delta \phi}(f_k) = \mathcal{L}(f_k)$ (see Section~\ref{sec:injected_RF_noise}). This is shown in Fig.~\ref{fig:coast1_setting2_b}. For now the discussion is limited to $f_k \in [1, 10^{3}]$\,kHz. Note, that both $\mathcal{L}(f_k)$ and $S_{\Delta \phi}(f_k)$ have both negative and positive components and are symmetric around the DC component, $f_k=0$\,Hz (see Section~\ref{sec:injected_RF_noise}).
 
     %$G_\phi(f_k)$\,[$\mathrm{rad^2}$/Hz] using Eq.~(\ref{eq:L_to_G}) (Fig.~\ref{fig:coast1_setting2_b}).
-    \item Re-sample the noise spectrum. The measured noise power values are equally spaced in frequency on a logarithmic scale. A linear interpolation is needed such that they are equally spaced on a linear scale, every $\Delta f = f_s/N$. As discussed in Section~\ref{sec:benchmark_theory_with_pyheadtail} since the beam encounters the noise once per turn, the sampling frequency of the noise spectrum in the simulations equals the revolution frequency, $f_s=f_\mathrm{rev}(=43.38$ kHz for the SPS). Note that the frequency spectrum of the noise in the simulations and hence the linear interpolation extends up to $f_s/2$ as illustrated in Fig.~\ref{fig:coast1_setting2_c}. In our simulations, $N=10^5$ turns are used. The result is shown in Fig.~\ref{fig:coast1_setting2_c}.
+    \item Re-sample the noise spectrum. The measured noise power values are equally spaced in frequency on a logarithmic scale. A linear interpolation is needed so that they are equally spaced on a linear scale, every $\Delta f = f_s/N$. As discussed in Section~\ref{sec:benchmark_theory_with_pyheadtail}, since the beam encounters the noise once per turn, the sampling frequency of the noise spectrum in the simulations equals the revolution frequency, $f_s=f_\mathrm{rev}(=43.38$ kHz for the SPS). Note that the frequency spectrum of the noise in the simulations and hence the linear interpolation extends up to $f_s/2$ as illustrated in Fig.~\ref{fig:coast1_setting2_c}. In our simulations, $N=10^5$ turns are used. The result is shown in Fig.~\ref{fig:coast1_setting2_c}.
     %\item Create the positive spectral components of the two-sided power spectrum, $S_\phi$, using Eq.~(\ref{eq:two-sided_2_single-sided}) for $f_k>0$. The result is shown in Fig.~\ref{fig:coast1_setting2_d}.
     \item Compute the amplitude of the spectral components of the Fourier transform, $\left | \fourierxform{\phi}_n(f_k) \right | $ according to Eq.~(\ref{eq:Sxx_definition_discrete_normalized}). %It should be noted, however, that this computation is done only for the positive part of the spectrum. Fig.~\ref{fig:coast1_setting2_e} depicts the result of this computation. 
     \item Generate the phase information for each positive spectral component. By definition the power spectral density does not contain any information about the phase of the frequency components. Therefore, one should generate this information by giving a random phase $\theta(f_k)$ obtained from uniform distribution between 0 and $2\pi$.
@@ -382,7 +392,9 @@ In detail, the steps are as follows:
     
     \item Finally, apply the inverse Fourier transform, Eq.~(\ref{eq:iDFT_definiton}), to $\fourierxform{\phi}_n(f_k)$. The  output is a  random  discrete  time  series, $\phi(n\Delta t)$ of $N$ values sampled every $\Delta t = 1/f_s=1/f_\mathrm{rev}$. 
     
-    \item The output $\phi_n$ forms the sequence of noise kicks that will act on the particles in the beam on each turn in the simulations. In particular
+    \item The generated sequence of noise kicks, $\phi_n$, that corresponds to the measured noise spectrum can be applied in the tracking simulations following the usual modeling described in Eq.~\eqref{eq:phase_noise_kick}. Now the parameter $\Delta \phi_j$ is the $j^\mathrm{th}$ element of the $\phi_n$ sequence, where $j=\{0...,N_\mathrm{turns}\}$ denotes the turn number of the simulation with $N_\mathrm{turns}$ being the total number of turns.
+    
+
 \end{enumerate} 
 
 %Path to plotting script: cernbox/Project_thesis/scripts_for_simple_figures_plot/measured_psd_to_time_series
@@ -455,11 +467,11 @@ Figure \ref{fig:generate_noise_kicks_sanity_check_1} shows the results of the fi
 \subsubsection*{PyHEADTAIL simulations} %\hfill \break
 Another way to validate the method for producing a sequence of noise kicks from a measured power spectrum is to perform numerical simulations using the generated noise kicks, and compare the resulting emittance growth with the predictions form an analytical model~\cite{PhysRevSTAB.18.101001}.
 
-In the simulations, which were performed with PyHEADTAIL, the beam was tracked for $10^5$ turns which corresponds to about 2.5\,s in the SPS. A kick representing the effect of the crab cavities was applied on each turn. The noise kicks that the beam encounters every turn at the CC location were generated from the phase and amplitude noise spectra of from Coast1-Setting2 of 2018 (Fig.~\ref{fig:example_PN_and_AN_coast1_setting2}). 
+In the simulations, which were performed with PyHEADTAIL, the beam was tracked for $10^5$ turns which corresponds to about 2.5\,s in the SPS. A kick representing the effect of the crab cavities was applied on each turn following Eq.~\eqref{eq:phase_noise_kick}. The noise kicks that the beam encounters every turn at the CC location were generated from the phase and amplitude noise spectra of from Coast1-Setting2 of 2018 (Fig.~\ref{fig:example_PN_and_AN_coast1_setting2}). 
 
 It should be noted, however, that the sequence of noise kicks includes a random factor through the set of random phases $\theta(f_k)$. To reduce the uncertainty in the results, multiple simulation runs were conducted. The set of random phases was regenerated randomly for each of 10 runs with a different seed each time. For each run, the initial bunch distribution was also regenerated randomly 3 times. The mean and the standard deviation of the emittance values obtained from the tracking were computed over all trials. The emittance growth rate was computed by performing a linear fit to the mean of the emittance values.
 
-Figures~\ref{fig:emitGrowth_AN} and~\ref{fig:emitGrowth_PN} show the emittance growth for the case of amplitude noise and phase noise respectively. The emittance evolution in the presence of both types of noise is also illustrated in Fig.~\ref{fig:emitGrowth_AN_and_PN}. The simulated emittance growth rates show very good agreement with the predictions from the analytical model. The results again support the validity of the method for generating a sequence of noise kicks from a measured noise power spectrum, described in section \ref{subsec:generatin_noise_kicks}.
+Figures~\ref{fig:emitGrowth_AN} and~\ref{fig:emitGrowth_PN} show the emittance growth for the case of amplitude noise and phase noise respectively. The emittance evolution in the presence of both types of noise is also illustrated in Fig.~\ref{fig:emitGrowth_AN_and_PN}. The simulated emittance growth rates show very good agreement with the predictions from the analytical model. The results again support the validity of the method for generating a sequence of noise kicks from a measured noise power spectrum, described in this section.
 
 
 \begin{figure}[!ht]
