some updates on chapter E3

--- a/appendix/appendix_e.tex
+++ b/appendix/appendix_e.tex
@@ -227,9 +227,9 @@ In this section, the individual emittance growth measurements for each coast of 
  \section{Bunch length measurements}\label{sec:bunch_length_meas_2022}
 
 
- The bunch length measurements presented in this section were performed with the Wall Current monitor. The Wall Current Monitor (WCM) acquires the longitudinal bunch profiles and uses a Gaussian fit for the evaluation of the bunch length. Each data point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 subsequent acquisitions, while the error bars indicate the standard deviation.
+ The bunch length measurements presented in this section were performed with the Wall Current Monitor (WCM). The WCM acquires the longitudinal bunch profiles which are fitted with a Gaussian function in the post-processing for the evaluation of the bunch length. Each data point shown in the folllowing plots corresponds to the average bunch length value obtained from 100 subsequent acquisitions, while the error bars indicate the standard deviation.
 
- Further details on the Wall Current Monitors that are installed in the CERN Proton Synchrotron (PS) and Large Hadron Collider (LHC) can be found in~\cite{Belleman:2313362, Argyropoulos:2752314}. The device installed in the SPS follows the same working principle. 
+ Further details on the WCM that are installed in the CERN Proton Synchrotron (PS) and Large Hadron Collider (LHC) can be found in~\cite{Belleman:2313362, Argyropoulos:2752314}. The device installed in the SPS follows the same working principle. 
 
 
  %https://accelconf.web.cern.ch/e08/papers/thpc144.pdf (from email communication with IVAN)
