some chages chapter 6

--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -13,7 +13,10 @@ Two prototype Crab Cavities have been installed in the Super Proton Synchrotron 
 
 
 \textcolor{red}{Comments from Andy:}
-Thanks for sending the abstract for your thesis.  I think this looks ok; but mostly it outlines the motivation for the study, and says little about what is actually contained in the thesis.  It might be helpful for a reader to expand a little on the material covered by the thesis.  For example, you could state that the mechanisms for emittance growth from crab cavity rf noise are explored through numerical simulations, and analytical calculations, and you find that without including the effects of impedance, measured emittance growth rates are much larger than predicted by simulation or theory.  When impedance effects are included in the simulations, the results are in much better agreement with experiment.  The simulations including impedance also demonstrate the dependence of the emittance growth suppression on the tune shift with amplitude, which is another feature consistent with experimental observations.
+Thanks for sending the abstract for your thesis.  I think this looks ok; but mostly it outlines the motivation for the study, and says little about what is actually contained in the thesis.  It might be helpful for a reader to expand a little on the material covered by the thesis. 
+
+
+For example, you could state that the mechanisms for emittance growth from crab cavity rf noise are explored through numerical simulations, and analytical calculations, and you find that without including the effects of impedance, measured emittance growth rates are much larger than predicted by simulation or theory.  When impedance effects are included in the simulations, the results are in much better agreement with experiment.  The simulations including impedance also demonstrate the dependence of the emittance growth suppression on the tune shift with amplitude, which is another feature consistent with experimental observations.
 
  
 
