--- a/head/abstract.tex
+++ b/head/abstract.tex
@@ -6,17 +6,14 @@
 % put your text here
 
 
-Thr High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC)  machine which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. Crab Cavities are a key component of the HL-LHC upgrade, as they will be employed to mitigate the luminosity reduction induced by the crossing angle at the interaction points of ATLAS and CMS. 
+The High-Luminosity LHC (HL-LHC) is the upgrade of the Large Hadron Collider (LHC) machine which aims to increase significantly the luminosity at the experiments in order to extend its potential for discoveries. Crab Cavities are a key component of the HL-LHC upgrade, as they will be employed to mitigate the luminosity reduction induced by the crossing angle at the interaction points of ATLAS and CMS. An important point to consider is the undesired transverse emittance growth due to noise in the Crab Cavities RF system which can result in luminosity loss. 
+
+This thesis explored the mechanisms for emittance growth from Crab Cavity RF noise through numerical simulations and experimental measurements. The studies focused on the Super Proton Synchrotron (SPS) machine where two prototype Crab Cavities were installed in 2018, prior to their installation in the LHC, to be tested for the first time with proton beams. It was found that the beam transverse impedance plays an important role in the emittance growth driven by Crab Cavity RF noise. The measured emittance growth rates are much smaller than predicted from simulations and available theoretical models without including impedance effects. When impedance effects are included in the simulations, the results are in much better agreement with the experiment. The simulations including the machine impedance also demonstrate the dependence of the emittance growth suppression on the tune shift with amplitude, which is another feature consistent with experimental observations. The implications for the HL-LHC are also discussed.
 
 
-Two prototype Crab Cavities have been installed in the Super Proton Synchrotron (SPS), prior to their installation in the LHC, in order to be tested for the first time with proton beams. An important point to consider is the undesired transverse emittance growth due to noise in their RF system. The experimental tests in the SPS showed that the effects of the beam transverse impedance play an important role in the emittance growth driven by Crab Cavity RF noise. This thesis investigates this interplay with detailed tracking simulations and experimental measurements. The implications for the HL-LHC are also discussed.
 
+%Two prototype Crab Cavities have been installed in the Super Proton Synchrotron (SPS), prior to their installation in the LHC, in order to be tested for the first time with proton beams. An important point to consider is the undesired transverse emittance growth due to noise in their RF system. The experimental tests in the SPS showed that the effects of the beam transverse impedance play an important role in the emittance growth driven by Crab Cavity RF noise. This thesis investigates this interplay with detailed tracking simulations and experimental measurements. The implications for the HL-LHC are also discussed.
 
-\textcolor{red}{Comments from Andy:}
-Thanks for sending the abstract for your thesis.  I think this looks ok; but mostly it outlines the motivation for the study, and says little about what is actually contained in the thesis.  It might be helpful for a reader to expand a little on the material covered by the thesis. 
-
-
-For example, you could state that the mechanisms for emittance growth from crab cavity rf noise are explored through numerical simulations, and analytical calculations, and you find that without including the effects of impedance, measured emittance growth rates are much larger than predicted by simulation or theory.  When impedance effects are included in the simulations, the results are in much better agreement with experiment.  The simulations including impedance also demonstrate the dependence of the emittance growth suppression on the tune shift with amplitude, which is another feature consistent with experimental observations.
 
  
 
